--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
         classpath "com.android.tools.build:gradle:4.2.0-beta05"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
