--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.luxrobo.hilt_study"
+        applicationId "com.example.hilt_study"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -45,6 +45,7 @@ ext {
     retrofit_version = '2.9.0'
     okhttp_version = '5.0.0-alpha.2'
     gson_version = '2.8.7'
+    lifecycle_version = "2.3.0"
 }
 
 dependencies {
@@ -58,9 +59,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "androidx.activity:activity-ktx:1.3.0-beta01"
+
     // hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     // gson
@@ -69,7 +73,7 @@ dependencies {
     // Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
 
     //okhttp
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
@@ -77,4 +81,13 @@ dependencies {
 
     // RxKotlin
     implementation "io.reactivex.rxjava3:rxkotlin:$rxkotlin_version"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 }
