--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,9 +1,6 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-parcelize'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -11,13 +8,13 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.hilt_study"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -44,48 +41,18 @@ android {
 
 ext {
     rxkotlin_version = '3.0.1'
-    hilt_version = '2.36'
-    retrofit_version = '2.9.0'
-    okhttp_version = '5.0.0-alpha.2'
-    gson_version = '2.8.7'
     lifecycle_version = "2.3.1"
 }
 
 dependencies {
 
-    implementation(project(":presentation"))
-    implementation(project(":data"))
-    implementation(project(":domain"))
-    implementation(project(":base"))
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation "androidx.activity:activity-ktx:1.3.0-beta01"
-
-    // hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-
-    // gson
-    implementation "com.google.code.gson:gson:$gson_version"
-
-    // Retrofit2
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
-
-    //okhttp
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 
     // RxKotlin
     implementation "io.reactivex.rxjava3:rxkotlin:$rxkotlin_version"
