--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
+    ext.kotlin_version = ConfigVersions.KOTLIN_VERSION
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
-        classpath "com.android.tools.build:gradle:4.2.0-beta05"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath ProjectConfig.GRADLE
+        classpath ProjectConfig.HILT_ANDROID_GRADLE_PLUGIN
+        classpath ProjectConfig.KOTLIN_GRADLE_PLUGIN
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
