--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -42,43 +42,36 @@ android {
     }
 }
 
-ext {
-    rxkotlin_version = '3.0.1'
-    hilt_version = '2.36'
-    retrofit_version = '2.9.0'
-    okhttp_version = '5.0.0-alpha.2'
-    gson_version = '2.8.7'
-    lifecycle_version = "2.3.1"
-}
-
 dependencies {
 
     implementation(project(":domain"))
     implementation(project(":base"))
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation Libraries.KOTLIN_STDLIB
+    implementation Libraries.CORE_KTX
+    implementation Libraries.APPCOMPAT
+    implementation Libraries.MATERIAL
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "androidx.activity:activity-ktx:1.3.0-beta01"
+    implementation Libraries.ACTIVITY_KTX
 
     // hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation Libraries.HILT_ANDROID
+    kapt Libraries.HILT_ANDROID_COMPILER
+    kapt Libraries.HILT_GOOGLE_COMPILER
+    implementation Libraries.HILT_LIFECYCLE_VIEWMODEL
 
     // RxKotlin
-    implementation "io.reactivex.rxjava3:rxkotlin:$rxkotlin_version"
+    implementation Libraries.RXKOTLIN
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation Libraries.LIFECYCLE_VIEWMODEL_KTX
+
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation Libraries.LIFECYCLE_LIVEDATA_KTX
+
     // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation Libraries.LIFECYCLE_RUNTIME_KTX
 }
